...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import isel.pdm.gomoku.ui.common.theme.Gomoku9Theme

const val ErrorAlertTestTag = "ErrorAlertTestTag"
const val ErrorAlertDismissButtonTestTag = "ErrorAlertDismissButtonTestTag"

@Composable
fun ErrorAlert(
    @StringRes title: Int,
    @StringRes message: Int,
...
